--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,13 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-    <group >
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_notes"
+            android:icon="@drawable/ic_baseline_assignment_24"
             android:title="Notes" />
         <item
             android:id="@+id/nav_courses"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:iconTint="#F05A28"
             android:title="Courses" />
     </group>
-    <item android:title="Communicate" />
+    <group android:visible="false">
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@android:drawable/ic_menu_share"
+            android:title="Share" />
+        <item
+            android:id="@+id/nav_send"
+            android:icon="@android:drawable/ic_menu_send"
+            android:title="Send as email" />
+    </group>
 </menu>
