Updated Settings Screen

--- a/app/src/main/res/xml/general_preferences.xml
+++ b/app/src/main/res/xml/general_preferences.xml
@@ -14,4 +14,10 @@
         android:selectAllOnFocus="true"
         android:singleLine="true"
         android:title="@string/pref_title_email_address" />
+    <ListPreference
+        android:defaultValue="@string/pref_default_favourite_social"
+        android:entries="@array/pref_entries_favourite_social"
+        android:entryValues="@array/pref_values_favourite_social"
+        android:key="user_favourite_social"
+        android:title="@string/pref_title_favourite_social" />
 </PreferenceScreen>
