Protecting the UI Thread with StrictMode

--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -18,4 +18,9 @@
         android:orderInCategory="100"
         android:title="Send as email"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_reminder"
+        android:icon="@android:drawable/stat_notify_chat"
+        android:title="Set reminder"
+        app:showAsAction="never" />
 </menu>
